--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Jogo_teste</h1>
-
+    <div id="score">Pontuação: 0</div>
     <canvas id="gameCanvas"></canvas>
     <script src="script.js"></script>
   </body>
